welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:8: error: not found: value T
			max = T(c) 
                              ^